2013-02-14
* use caching databases for Java fields and class names. This saves a ton of
time (especially fields)
* copy results more efficiently, which was a problem when there were lots of
result files

2013-02-13
* prevent some scans for running on ELF files
* remove false positives from LRZIP unpacking

2013-02-12
* fix ELF tagging in prerun.py. This prevents LZMA unpacking from being called
needlessly.
* write results of leafscans to disk earlier and don't keep them in memory
until the very late end. Rewrite everything (except the GUI) that uses the old
notation. This saves a significant chunk of memory (90% in some of my test
cases) which makes it less likely swap is used, which just kills performance.

2013-02-10
* don't store unneeded data in scans that don't need it

2013-02-07
* merge caching databases, decluttering configuration a bit
* add conversion script to merge databases

2013-02-06
* if available use precomputed scores

2013-02-05
* store variable names more efficiently

2013-02-04
* cleanup for LRZIP unpacking
* more sanity checks for ext2/3/4 unpacking

2013-01-27
* fixes for patterns in bat-code2html. There are many more variants out there
than the original authors ever encountered.

2013-01-26
* add reimplementation of romfsck.c (which segfaulted), done in Python, with
more sanity checks.

2013-01-21
* add configuration checker batconfigcheck.py to check validity of
configuration files

2013-01-20
* update documentation for BAT 12
* return more information in JAR file aggregator

2013-01-19
* expand function name reporting and display in the GUI
* move sanity checks from various methods in ranking.py to top level methods,
plus document the sanity checks.
* check whether or not old format databases were used
* load cloning database in memory to prevent accessing the cloning database
many times.

2013-01-18
* remove more duplicate code from ranking.py
* merge some reporting modules
* add very basic reporting for function names

2013-01-17